# rusql

./: .gitignore  Cargo.toml  database.rdb  readme.md
src/: errors.rs  helper.rs  lib.rs  main.rs
src/database/: api.rs  codec.rs  errors.rs  freelist.rs  helper.rs  meta_page.rs  mod.rs  node.rs  pager.rs  tree.rs  types.rs
src/database/api/: api.rs  kvdb.rs  mod.rs  transaction.rs  tx.rs  txdb.rs
src/database/btree/: cursor.rs  mod.rs  node.rs  tree.rs
src/database/interface/: types.rs
src/database/pager/: buffer.rs  diskpager.rs  freelist.rs  lru.rs  mempager.rs  metapage.rs  mmap.rs  mod.rs  pager.rs  transaction.rs
src/database/tables/: codec.rs  db.rs  keyvalues.rs  mod.rs  records.rs  table_db.rs  tables.rs
src/database/transactions/: keyrange.rs  kvdb.rs  mod.rs  retry.rs  tx.rs  txdb.rs
src/pager/: dbheader.rs  mod.rs  node.rs  tree.rs  types.rs
tests/: pager_test.rs
