[package]
name = "rusql"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
thiserror = { version = "2.0" }
test-log = {version = "0.2", default-features = false, features = ["trace"]}
